# hvgs2seq

./: .gitignore  .pre-commit-config.yaml  FLOW.md  Makefile  README.md  complex_variant_analysis.py  pyproject.toml  pyproject.toml.backup  setup_gencode_data.sh  test_pyhgvs.py  test_pyhgvs_integration.py
hgvs2seq/: __init__.py  cli.py  config.py  data_provider.py  hgvs_compat.py  models.py  parse.py  project.py  py.typed  refseq.py
hgvs2seq/apply/: batch.py  single.py
hgvs2seq/consequence/: __init__.py  analyzer.py  base.py  cds.py  frameshift.py  inframe_indel.py  missense.py  nmd.py  start_loss.py  stop_gain.py  stop_loss.py  synonymous.py
hgvs2seq/io/: fasta.py  jsonio.py
hgvs2seq/pyhgvs/: __init__.py  models.py  utils.py
hgvs2seq/splicing/: spliceai.py
output/: complex_analysis_results.fasta  complex_analysis_results.json  complex_test_results.fasta  complex_test_results.json  config.json  pah_variant_analysis.csv  pah_variant_analysis.json  run_complex_test.py  run_test.py  test_results.fasta  test_results.json  variants.txt
tests/: conftest.py  test_apply.py  test_cds.py  test_cli.py  test_config.py  test_consequence.py  test_consequence_analysis.py  test_data_provider.py  test_fasta.py  test_gtf_reader.py  test_hgvs_compat.py  test_integration.py  test_models.py  test_nmd.py  test_parse.py  test_parse_lightweight.py  test_phase4.py  test_project.py  test_project_module.py  test_refgene_reader.py  test_refseq.py  test_spliceai.py
tests/consequence/: test_analyzer.py  test_base.py  test_frameshift.py  test_start_loss.py  test_stop_gain.py  test_stop_loss.py  test_synonymous.py
tests/fixtures/: test_transcript_config.json  test_variants.txt
tests/pyhgvs/: genome.py  test_hgvs_names.py  test_hgvs_names_long.py  test_variants.py
tests/pyhgvs/data/: genes.refGene
venv311/: pyvenv.cfg
