[tool.poetry]
name = "hgvs2seq"
version = "0.1.0"
description = "Simple package that will take as input a list of hgvs variants and output the final sequence."
authors = ["Jules <jules@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
hgvs = "^1.5.1"
pyyaml = "^6.0"
spliceai = "^1.3.1"
tensorflow = ">=1.2.0"
psycopg2-binary = "^2.9.9"
click = "^8.1.7"

[tool.poetry.scripts]
hgvs2seq = "hgvs2seq.cli:main"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
ruff = "^0.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true
ignore_missing_imports = true